# postgres-webapp-live-proof

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: publish-immutable-image.yml
app/: main.py  models.py  store.py
ops/: deploy-contract.v1.yaml
tests/: test_app.py
