[project]
name = "postgres-webapp-live-proof"
version = "0.1.0"
description = "First stateful Postgres live-proof web app for coolify-01."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.118,<0.119",
  "psycopg[binary]>=3.2,<3.3",
  "uvicorn>=0.37,<0.38",
]

[dependency-groups]
dev = [
  "coverage[toml]>=7.10,<8",
  "deptry>=0.23,<0.24",
  "httpx>=0.28,<0.29",
  "pip-audit>=2.9,<3",
  "pre-commit>=4.3,<5",
  "pyright>=1.1.400,<1.2",
  "pytest>=8.4,<9",
  "ruff>=0.13,<0.14",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["app", "tests"]
typeCheckingMode = "basic"
venvPath = "."
venv = ".venv"
